k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aether-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aether-mongodb
  template:
    metadata:
      labels:
        app: aether-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: aether-mongodb
  ports:
    - port: 27017
      targetPort: 27017
